--- a/data/cards/01945387.yaml
+++ b/data/cards/01945387.yaml
@@ -70,7 +70,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-EN0??
+  - set_number: STP6-EN011
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
@@ -88,7 +88,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-DE0??
+  - set_number: STP6-DE011
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
@@ -106,7 +106,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-FR0??
+  - set_number: STP6-FR011
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
@@ -124,7 +124,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-IT0??
+  - set_number: STP6-IT011
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
@@ -137,7 +137,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-PT0??
+  - set_number: STP6-PT011
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
