--- a/data/cards/05133471.yaml
+++ b/data/cards/05133471.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-EN014
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   de:
   - set_number: CROS-DE062
     set_name: Crossed Souls
@@ -91,6 +95,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-DE014
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   fr:
   - set_number: CROS-FR062
     set_name: Crossed Souls
@@ -116,6 +124,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-FR014
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   it:
   - set_number: CROS-IT062
     set_name: Crossed Souls
@@ -141,6 +153,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-IT014
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   pt:
   - set_number: CROS-PT062
     set_name: Crossed Souls
@@ -166,6 +182,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-PT014
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   ja:
   - set_number: CROS-JP062
     set_name: Crossed Souls
