--- a/data/cards/30208479.yaml
+++ b/data/cards/30208479.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Ultra Rare
+  - set_number: STP6-EN023
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   de:
   - set_number: PP01-DE001
     set_name: Premium Pack (TCG)
@@ -84,6 +88,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Ultra Rare
+  - set_number: STP6-DE023
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: PP01-FR001
     set_name: Premium Pack (TCG)
@@ -101,6 +109,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Ultra Rare
+  - set_number: STP6-FR023
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   it:
   - set_number: PP01-IT001
     set_name: Premium Pack (TCG)
@@ -118,6 +130,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Ultra Rare
+  - set_number: STP6-IT023
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: YGLD-PTC01
     set_name: Yugi's Legendary Decks
@@ -127,6 +143,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Ultra Rare
+  - set_number: STP6-PT023
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   ja:
   - set_number: ''
     set_name: 'Yu-Gi-Oh! Duel Monsters II: Dark duel Stories Duelist Legend in Tokyo Dome attendance cards'
