--- a/data/cards/36021814.yaml
+++ b/data/cards/36021814.yaml
@@ -74,7 +74,7 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
-  - set_number: STP6-EN0??
+  - set_number: STP6-EN022
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -107,7 +107,7 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
-  - set_number: STP6-DE0??
+  - set_number: STP6-DE022
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -140,7 +140,7 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
-  - set_number: STP6-FR0??
+  - set_number: STP6-FR022
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -173,7 +173,7 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
-  - set_number: STP6-IT0??
+  - set_number: STP6-IT022
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -198,7 +198,7 @@ sets:
     set_name: OTS Tournament Pack 16
     rarities:
     - Super Rare
-  - set_number: STP6-PT0??
+  - set_number: STP6-PT022
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
