--- a/data/cards/43973174.yaml
+++ b/data/cards/43973174.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-EN025
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   - set_number: KC01-EN041
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
@@ -146,6 +150,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-DE025
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: DDK-F039
     set_name: 'Starter Deck: Kaiba'
@@ -191,6 +199,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-FR025
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   it:
   - set_number: MIK-I039
     set_name: 'Starter Deck: Kaiba'
@@ -236,6 +248,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-IT025
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: DIK-P042
     set_name: 'Starter Deck: Kaiba'
@@ -269,6 +285,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-PT025
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   ja:
   - set_number: ''
     set_name: EX Starter Box
