--- a/data/cards/48092532.yaml
+++ b/data/cards/48092532.yaml
@@ -75,7 +75,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-EN0??
+  - set_number: STP6-EN002
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
@@ -109,7 +109,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-DE0??
+  - set_number: STP6-DE002
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
@@ -139,7 +139,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-FR0??
+  - set_number: STP6-FR002
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
@@ -173,7 +173,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-IT0??
+  - set_number: STP6-IT002
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
@@ -187,7 +187,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-PT0??
+  - set_number: STP6-PT002
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
