--- a/data/cards/50304345.yaml
+++ b/data/cards/50304345.yaml
@@ -67,7 +67,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-EN0??
+  - set_number: STP6-EN007
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
@@ -92,7 +92,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-DE0??
+  - set_number: STP6-DE007
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
@@ -113,7 +113,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-FR0??
+  - set_number: STP6-FR007
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
@@ -138,7 +138,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-IT0??
+  - set_number: STP6-IT007
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
@@ -155,7 +155,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-PT0??
+  - set_number: STP6-PT007
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Super Rare
