--- a/data/cards/52105192.yaml
+++ b/data/cards/52105192.yaml
@@ -66,7 +66,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: STP6-EN0??
+  - set_number: STP6-EN027
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -95,7 +95,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: STP6-DR0??
+  - set_number: STP6-DR027
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -124,7 +124,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: STP6-FR0??
+  - set_number: STP6-FR027
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -153,7 +153,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: STP6-IT0??
+  - set_number: STP6-IT027
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -174,7 +174,7 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
-  - set_number: STP6-PT0??
+  - set_number: STP6-PT027
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
