--- a/data/cards/71200730.yaml
+++ b/data/cards/71200730.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: STP6-EN020
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   - set_number: DCR-023
     set_name: Dark Crisis
     rarities:
@@ -105,6 +109,10 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: STP6-DE020
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: SD2-FR007
     set_name: 'Structure Deck: Zombie Madness'
@@ -132,6 +140,10 @@ sets:
     - Common
   - set_number: DCR-FR023
     set_name: Dark Crisis (25th Anniversary Edition)
+    rarities:
+    - Common
+  - set_number: STP6-FR020
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   it:
@@ -163,6 +175,10 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: STP6-IT020
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: SD2-PT007
     set_name: 'Structure Deck: Zombie Madness'
@@ -182,6 +198,10 @@ sets:
     - Common
   - set_number: DCR-PT023
     set_name: Dark Crisis (25th Anniversary Edition)
+    rarities:
+    - Common
+  - set_number: STP6-PT020
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   ja:
