--- a/data/cards/74003290.yaml
+++ b/data/cards/74003290.yaml
@@ -69,7 +69,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: STP6-EN0??
+  - set_number: STP6-EN030
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -103,7 +103,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: STP6-DE0??
+  - set_number: STP6-DE030
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -137,7 +137,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: STP6-FR0??
+  - set_number: STP6-FR030
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -171,7 +171,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: STP6-IT0??
+  - set_number: STP6-IT030
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -200,7 +200,7 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
-  - set_number: STP6-PT0??
+  - set_number: STP6-PT030
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
