--- a/data/cards/76305638.yaml
+++ b/data/cards/76305638.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-EN017
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   - set_number: LON-069
     set_name: Labyrinth of Nightmare
     rarities:
@@ -78,6 +82,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-DE017
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: LDC-F069
     set_name: Labyrinth of Nightmare
@@ -91,6 +99,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-FR017
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   it:
   - set_number: LDI-I069
     set_name: Labyrinth of Nightmare
@@ -102,6 +114,10 @@ sets:
     - Common
   - set_number: SBCB-IT029
     set_name: 'Speed Duel: Battle City Box'
+    rarities:
+    - Common
+  - set_number: STP6-IT017
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   ja:
