--- a/data/cards/94853057.yaml
+++ b/data/cards/94853057.yaml
@@ -65,7 +65,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-EN0??
+  - set_number: STP6-EN003
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
@@ -95,7 +95,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-DE0??
+  - set_number: STP6-DE003
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
@@ -117,7 +117,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-FR0??
+  - set_number: STP6-FR003
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
@@ -143,7 +143,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-IT0??
+  - set_number: STP6-IT003
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
@@ -152,7 +152,7 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: STP6-PT0??
+  - set_number: STP6-PT003
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Ultra Rare
