--- a/data/tcg-speed-skill/yugipedia585515.yaml
+++ b/data/tcg-speed-skill/yugipedia585515.yaml
@@ -67,39 +67,44 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
-  - set_number: STP6-EN???
+  - set_number: STP6-ENS01
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   de:
   - set_number: SS02-DEAS3
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
-  - set_number: STP6-DE???
+  - set_number: STP6-DES01
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   fr:
   - set_number: SS02-FRAS3
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
-  - set_number: STP6-FR???
+  - set_number: STP6-FRS01
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   it:
   - set_number: SS02-ITAS3
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
-  - set_number: STP6-IT???
+  - set_number: STP6-ITS01
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   pt:
   - set_number: SS02-PTAS3
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
-  - set_number: STP6-PT???
+  - set_number: STP6-PTS01
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
 yugipedia_page_id: 585515
