--- a/data/tcg-speed-skill/yugipedia625638.yaml
+++ b/data/tcg-speed-skill/yugipedia625638.yaml
@@ -57,39 +57,44 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
-  - set_number: STP6-EN???
+  - set_number: STP6-ENS02
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   de:
   - set_number: SBAD-DES03
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
-  - set_number: STP6-DE???
+  - set_number: STP6-DES02
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   fr:
   - set_number: SBAD-FRS03
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
-  - set_number: STP6-FR???
+  - set_number: STP6-FRS02
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   it:
   - set_number: SBAD-ITS03
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
-  - set_number: STP6-IT???
+  - set_number: STP6-ITS02
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   pt:
   - set_number: SBAD-PTS03
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
-  - set_number: STP6-PT???
+  - set_number: STP6-PTS02
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
 yugipedia_page_id: 625638
