--- a/data/cards/00564541.yaml
+++ b/data/cards/00564541.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-EN008
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   de:
   - set_number: CRMS-DE085
     set_name: Crimson Crisis
@@ -61,6 +65,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-DE008
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   fr:
   - set_number: CRMS-FR085
     set_name: Crimson Crisis
@@ -70,6 +78,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-FR008
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   it:
   - set_number: CRMS-IT085
     set_name: Crimson Crisis
@@ -79,11 +91,19 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-IT008
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   pt:
   - set_number: SGX3-PTB12
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-PT008
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   ja:
   - set_number: EXP2-JP036
     set_name: Extra Pack Volume 2
