--- a/data/cards/01347977.yaml
+++ b/data/cards/01347977.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-EN018
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   - set_number: LOD-021
     set_name: Legacy of Darkness
     rarities:
@@ -86,6 +90,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-DE018
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: DB2-FR141
     set_name: Dark Beginning 2
@@ -104,6 +112,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-FR018
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   it:
   - set_number: DB2-IT141
     set_name: Dark Beginning 2
@@ -120,6 +132,10 @@ sets:
     - Starfoil Rare
   - set_number: SBCB-IT150
     set_name: 'Speed Duel: Battle City Box'
+    rarities:
+    - Common
+  - set_number: STP6-IT018
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   ja:
