--- a/data/cards/12071500.yaml
+++ b/data/cards/12071500.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-EN013
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   de:
   - set_number: DP06-DE019
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -89,6 +93,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-DE013
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   fr:
   - set_number: DP06-FR019
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -110,6 +118,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-FR013
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   it:
   - set_number: DP06-IT019
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -135,6 +147,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-IT013
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   pt:
   - set_number: LED5-PT022
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -152,6 +168,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-PT013
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP06-JP024
     set_name: 'Duelist Pack: Jaden Yuki 3'
