--- a/data/cards/17985575.yaml
+++ b/data/cards/17985575.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-EN016
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   - set_number: KC01-EN030
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
@@ -146,6 +150,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-DE016
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: DDK-F038
     set_name: 'Starter Deck: Kaiba'
@@ -187,6 +195,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-FR016
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   it:
   - set_number: MIK-I038
     set_name: 'Starter Deck: Kaiba'
@@ -228,6 +240,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-IT016
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: DIK-P041
     set_name: 'Starter Deck: Kaiba'
@@ -257,6 +273,10 @@ sets:
     set_name: Speed Duel Tournament Pack 1
     rarities:
     - Super Rare
+  - set_number: STP6-PT016
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   ja:
   - set_number: ''
     set_name: EX Starter Box
