--- a/data/cards/55773067.yaml
+++ b/data/cards/55773067.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-EN029
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   - set_number: LOD-097
     set_name: Legacy of Darkness
     rarities:
@@ -73,6 +77,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-DE029
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: DB2-FR205
     set_name: Dark Beginning 2
@@ -84,6 +92,10 @@ sets:
     - Common
   - set_number: SBCB-FR145
     set_name: 'Speed Duel: Battle City Box'
+    rarities:
+    - Common
+  - set_number: STP6-FR029
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   it:
@@ -99,9 +111,17 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-IT029
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT079
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: STP6-PT029
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   ja:
