--- a/data/cards/56830749.yaml
+++ b/data/cards/56830749.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: STP6-EN012
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   - set_number: MRD-140
     set_name: Metal Raiders
     rarities:
@@ -101,6 +105,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: STP6-DE012
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   fr:
   - set_number: MRD-F140
     set_name: Metal Raiders
@@ -122,6 +130,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: STP6-FR012
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   it:
   - set_number: PMT-I140
     set_name: Metal Raiders
@@ -143,6 +155,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: STP6-IT012
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   pt:
   - set_number: PMT-P140
     set_name: Metal Raiders
@@ -160,6 +176,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: STP6-PT012
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   ja:
   - set_number: ''
     set_name: Booster 7
