--- a/data/cards/63060238.yaml
+++ b/data/cards/63060238.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-EN009
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   de:
   - set_number: WSUP-DE032
     set_name: World Superstars
@@ -72,6 +76,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-DE009
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   fr:
   - set_number: WSUP-FR032
     set_name: World Superstars
@@ -85,6 +93,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-FR009
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   it:
   - set_number: WSUP-IT032
     set_name: World Superstars
@@ -98,6 +110,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-IT009
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   pt:
   - set_number: WSUP-PT032
     set_name: World Superstars
@@ -111,6 +127,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-PT009
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   ja:
   - set_number: NECH-JP087
     set_name: The New Challengers
