--- a/data/cards/63665875.yaml
+++ b/data/cards/63665875.yaml
@@ -78,6 +78,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-EN001
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   - set_number: DT02-EN060
     set_name: Duel Terminal 2
     rarities:
@@ -115,6 +119,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-DE001
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PTDN-FR098
     set_name: Phantom Darkness
@@ -148,6 +156,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-FR001
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PTDN-IT098
     set_name: Phantom Darkness
@@ -181,6 +193,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-IT001
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LCJW-PT205
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -198,6 +214,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-PT001
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: GB8-B02
     set_name: 'Yu-Gi-Oh! Duel Monsters 8: Reshef of Destruction Game Guide 2 promotional card'
