--- a/data/cards/69452756.yaml
+++ b/data/cards/69452756.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-EN005
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   de:
   - set_number: MACR-DE079
     set_name: Maximum Crisis
@@ -73,6 +77,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-DE005
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: MACR-FR079
     set_name: Maximum Crisis
@@ -90,6 +98,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-FR005
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   it:
   - set_number: MACR-IT079
     set_name: Maximum Crisis
@@ -107,6 +119,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-IT005
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: MACR-PT079
     set_name: Maximum Crisis
@@ -124,6 +140,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-PT005
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: MACR-JP079
     set_name: Maximum Crisis
