--- a/data/cards/76792184.yaml
+++ b/data/cards/76792184.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Common
+  - set_number: STP6-EN024
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   de:
   - set_number: PP01-DE002
     set_name: Premium Pack (TCG)
@@ -77,6 +81,10 @@ sets:
     - Common
   - set_number: SBTK-DE002
     set_name: 'Speed Duel: Trials of the Kingdom'
+    rarities:
+    - Common
+  - set_number: STP6-DE024
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   fr:
@@ -96,6 +104,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Common
+  - set_number: STP6-FR024
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   it:
   - set_number: PP01-IT002
     set_name: Premium Pack (TCG)
@@ -113,6 +125,10 @@ sets:
     set_name: 'Speed Duel: Trials of the Kingdom'
     rarities:
     - Common
+  - set_number: STP6-IT024
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: YGLD-PTC32
     set_name: Yugi's Legendary Decks
@@ -120,6 +136,10 @@ sets:
     - Common
   - set_number: SBTK-PT002
     set_name: 'Speed Duel: Trials of the Kingdom'
+    rarities:
+    - Common
+  - set_number: STP6-PT024
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   ja:
