--- a/data/cards/94568601.yaml
+++ b/data/cards/94568601.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP6-EN019
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   - set_number: LOD-034
     set_name: Legacy of Darkness
     rarities:
@@ -93,6 +97,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP6-DE019
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: DB2-FR151
     set_name: Dark Beginning 2
@@ -112,6 +120,10 @@ sets:
     - Common
   - set_number: SS02-FRA07
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP6-FR019
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   it:
@@ -135,6 +147,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP6-IT019
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT149
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -142,6 +158,10 @@ sets:
     - Common
   - set_number: SS02-PTA07
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP6-PT019
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   ja:
