--- a/data/cards/99861526.yaml
+++ b/data/cards/99861526.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-EN006
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   de:
   - set_number: POTD-DE008
     set_name: Power of the Duelist
@@ -94,6 +98,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-DE006
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   fr:
   - set_number: POTD-FR008
     set_name: Power of the Duelist
@@ -118,6 +126,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-FR006
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   it:
   - set_number: POTD-IT008
     set_name: Power of the Duelist
@@ -142,6 +154,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-IT006
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   pt:
   - set_number: BP02-PT044
     set_name: 'Battle Pack 2: War of the Giants'
@@ -157,6 +173,10 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-PT006
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   ja:
   - set_number: POTD-JP008
     set_name: Power of the Duelist
