--- a/data/tcg-speed-skill/yugipedia715362.yaml
+++ b/data/tcg-speed-skill/yugipedia715362.yaml
@@ -55,35 +55,40 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP6-EN???
+  - set_number: STP6-ENS04
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   de:
   - set_number: SBCB-DES12
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP6-DE???
+  - set_number: STP6-DES04
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   fr:
   - set_number: SBCB-FRS12
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP6-FR???
+  - set_number: STP6-FRS04
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   it:
   - set_number: SBCB-ITS12
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP6-IT???
+  - set_number: STP6-ITS04
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   pt:
-  - set_number: STP6-PT???
+  - set_number: STP6-PTS04
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
 yugipedia_page_id: 715362
