--- a/data/tcg-speed-skill/yugipedia716048.yaml
+++ b/data/tcg-speed-skill/yugipedia716048.yaml
@@ -49,35 +49,40 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP6-EN???
+  - set_number: STP6-ENS03
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   de:
   - set_number: SBCB-DES11
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP6-DE???
+  - set_number: STP6-DES03
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   fr:
   - set_number: SBCB-FRS11
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP6-FR???
+  - set_number: STP6-FRS03
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   it:
   - set_number: SBCB-ITS11
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP6-IT???
+  - set_number: STP6-ITS03
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
   pt:
-  - set_number: STP6-PT???
+  - set_number: STP6-PTS03
     set_name: Speed Duel Tournament Pack 6
     rarities:
+    - Common
 yugipedia_page_id: 716048
