--- a/data/tcg-speed-skill/yugipedia716262.yaml
+++ b/data/tcg-speed-skill/yugipedia716262.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-EN005
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   de:
   - set_number: SGX2-DES08
     set_name: 'Speed Duel GX: Midterm Paradox'
+    rarities:
+    - Common
+  - set_number: STP6-DE005
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-FR005
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   it:
   - set_number: SGX2-ITS08
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
+  - set_number: STP6-IT005
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: SGX2-PTS08
     set_name: 'Speed Duel GX: Midterm Paradox'
+    rarities:
+    - Common
+  - set_number: STP6-PT005
+    set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
 yugipedia_page_id: 716262
