--- a/data/cards/68989420.yaml
+++ b/data/cards/68989420.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> オーバー・ドラグナー
   ja_romaji: Tekku Jīnasu Ōbā Doragunā
-  ko:
+  ko: <ruby>TG<rt>테크지너스</rt></ruby> 오버 드래그너
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25,7 +25,12 @@ text:
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードがＳ召喚した場合に発動できる。自分の墓地から「ＴＧ」モンスターを任意の数だけ守備表示で特殊召喚する。この効果の発動後、ターン終了時まで自分は「ＴＧ」モンスターしか特殊召喚できない。②：フィールドのこのカードが破壊された場合に発動する。自分は１枚ドローする。
-  ko:
+  ko: |-
+    튜너 + 튜너 이외의 몬스터 1장 이상
+
+    이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다.
+    ①: 이 카드를 싱크로 소환했을 경우에 발동할 수 있다. 자신 묘지에서 "TG(테크지너스)" 몬스터를 임의의 수만큼 수비 표시로 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 "TG(테크지너스)" 몬스터밖에 특수 소환할 수 없다.
+    ②: 필드의 이 카드가 파괴되었을 경우에 발동한다. 자신은 1장 드로우한다.
   zh-TW:
   zh-CN:
 card_type: Monster
