--- a/data/cards/77392987.yaml
+++ b/data/cards/77392987.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> ロケット・サラマンダー
   ja_romaji: Tekku Jīnasu Roketto Saramandā
-  ko: <ruby>ＴＧ<rt>테크지너스</rt></ruby> 로켓 샐러맨더
+  ko: <ruby>TG<rt>테크지너스</rt></ruby> 로켓 샐러맨더
   ko_rr:
   zh-TW:
   zh-CN:
