--- a/data/cards/94773007.yaml
+++ b/data/cards/94773007.yaml
@@ -7,7 +7,7 @@ name:
   fr: Jirai Gumo
   it: Jirai Gumo
   pt: Jirai Gumo
-  ja: <ruby>地<rt>じ</rt></ruby><ruby>雷<rt>らい</rt></ruby><ruby>蜘<rt>グ</rt></ruby><ruby>蛛<rt>モ</rt></ruby>
+  ja: <ruby>地<rt>じ</rt></ruby><ruby>雷<rt>らい</rt></ruby><ruby>蜘蛛<rt>グモ</rt></ruby>
   ja_romaji: Jiraigumo
   ko: 지뢰거미
   ko_rr:
