--- a/data/cards/99590524.yaml
+++ b/data/cards/99590524.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 狡猾落穴
 text:
   en: |-
-    If you have no Trap Cards in your Graveyard: Target 2 monsters on the field; destroy those targets.
+    If you have no Traps in your GY: Target 2 monsters on the field; destroy those targets.
   de: |-
     Falls du keine Fallen in deinem Friedhof hast: Wähle 2 Monster auf dem Spielfeld; zerstöre jene gewählten Ziele.
   es: |-
