--- a/data/cards/02339825.yaml
+++ b/data/cards/02339825.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby>－クローズ
   ja_romaji: Tekku Jīnasu - Kurōzu
-  ko:
+  ko: <ruby>TG<rt>테크지너스</rt></ruby>－클로즈
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,10 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分フィールドに機械族の「ＴＧ」モンスターが存在し、モンスターの効果・魔法・罠カードが発動した時に発動できる。その発動を無効にし破壊する。②：このカードが墓地に存在する状態で、Ｓモンスターが除外された場合に発動できる。このカードを自分フィールドにセットする。この効果でセットしたこのカードはフィールドから離れた場合に除外される。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다.
+    ①: 자신 필드에 기계족인 "TG(테크지너스)" 몬스터가 존재하고, 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 하고 파괴한다.
+    ②: 이 카드가 묘지에 존재하는 상태에서, 싱크로 몬스터가 제외되었을 경우에 발동할 수 있다. 이 카드를 자신 필드에 세트한다. 이 효과로 세트한 이 카드는 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN:
 card_type: Trap
