--- a/data/cards/09674034.yaml
+++ b/data/cards/09674034.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: スネークアイ・エクセル
   ja_romaji: Sunēkuai Ekuseru
-  ko:
+  ko: 스네이크아이 엑셀
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,10 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから炎属性・レベル１モンスター１体を手札に加える。②：このカードを含む自分フィールドの表側表示カード２枚を墓地へ送って発動できる。手札・デッキから「スネークアイ・エクセル」以外の「スネークアイ」モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다.
+    ①: 이 카드를 일반 소환 / 특수 소환했을 경우에 발동할 수 있다. 덱에서 화염 속성 / 레벨 1 몬스터 1장을 패에 넣는다.
+    ②: 이 카드를 포함하는 자신 필드의 앞면 표시 카드 2장을 묘지로 보내고 발동할 수 있다. 패 / 덱에서 "스네이크아이 엑셀" 이외의 "스네이크아이" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
