--- a/data/cards/32480825.yaml
+++ b/data/cards/32480825.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> マイティ・ストライカー
   ja_romaji: Tekku Jīnasu Maiti Sutoraikā
-  ko:
+  ko: <ruby>TG<rt>테크지너스</rt></ruby> 마이티 스트라이커
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25,7 +25,13 @@ text:
   ja: |-
     チューナー＋チューナー以外のモンスター１体
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＳ召喚した場合に発動できる。デッキから「ＴＧ」魔法・罠カード１枚を手札に加える。②：相手メインフェイズに１度、発動できる。このカードを含む自分フィールドのモンスターを素材としてＳ召喚を行う。③：このカードがモンスターゾーンから墓地へ送られた場合に発動できる。デッキから「ＴＧ」カード１枚を墓地へ送る。
-  ko:
+  ko: |-
+    튜너 ＋ 튜너 이외의 몬스터 1장
+
+    이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다.
+    ①: 이 카드를 싱크로 소환했을 경우에 발동할 수 있다. 덱에서 "TG(테크지너스)" 마법 / 함정 카드 1장을 패에 넣는다.
+    ②: 상대 메인 페이즈에 1번, 발동할 수 있다. 이 카드를 포함하는 자신 필드의 몬스터를 소재로서 싱크로 소환을 실행한다.
+    ③: 이 카드가 몬스터 존에서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "TG(테크지너스)" 카드 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN:
 card_type: Monster
