--- a/data/cards/54573517.yaml
+++ b/data/cards/54573517.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby>－オールクリア
   ja_romaji: Tekku Jīnasu - Ōru Kuria
-  ko:
+  ko: <ruby>TG<rt>테크지너스</rt></ruby>－올클리어
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,11 @@ text:
   pt:
   ja: |-
     このカード名の③の効果は１ターンに１度しか使用できない。①：フィールドの「ＴＧ」モンスターは機械族になる。②：自分は通常召喚に加えて１度だけ、自分メインフェイズに「ＴＧ」モンスター１体を召喚できる。③：自分メインフェイズに発動できる。自分の手札・フィールドの「ＴＧ」モンスター１体を破壊し、そのモンスターとはカード名が異なる「ＴＧ」モンスター１体を自分のデッキ・墓地から手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다.
+    ①: 필드의 "TG(테크지너스)" 몬스터는 기계족이 된다.
+    ②: 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 "TG(테크지너스)" 몬스터 1장을 일반 소환할 수 있다.
+    ③: 자신 메인 페이즈에 발동할 수 있다. 자신의 패 / 필드의 "TG(테크지너스)" 몬스터 1장을 파괴하고, 그 몬스터와는 카드명이 다른 "TG(테크지너스)" 몬스터 1장을 자신의 덱 / 묘지에서 패에 넣는다.
   zh-TW:
   zh-CN:
 card_type: Spell
