--- a/rush.yaml
+++ b/rush.yaml
@@ -116403,6 +116403,122 @@ yugipedia_page_id: 1009632
 ---
 konami_id:
 name:
+  en: The Ultimate Blue-Eyed Legend
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 究極の青眼伝説
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Fusion Summon a Level 10 or higher Dragon Type monster by sending up to 3 Dragon Type monsters from your hand and/or field to the Graveyard as material. This turn, the monster Special Summoned by this effect cannot be destroyed by your opponent's card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: TheUltimateBlueEyedLegend-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JP027
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1011310
+---
+konami_id:
+name:
+  en: Absolute Lord of D.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロード・オブ・ドラゴンードラゴンの絶対者ー
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase this card was Normal or Special Summoned.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 4 cards of your Deck. You can add 1 excavated Level 8 LIGHT Attribute Dragon Type monster and/or 1 excavated "The Ultimate Blue-Eyed Legend" to your hand. Shuffle the remaining cards into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: DARK
+level: 4
+atk: 1200
+def: 1100
+images:
+- index: 1
+  image: AbsoluteLordofD-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JP005
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1011311
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
