--- a/data/rush/yugipedia1011311.yaml
+++ b/data/rush/yugipedia1011311.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: ロード・オブ・ドラゴンードラゴンの絶対者ー
-  ja_romaji:
+  ja: ロード・オブ・ドラゴン－ドラゴンの<ruby>絶<rt>ぜっ</rt></ruby><ruby>対<rt>たい</rt></ruby><ruby>者<rt>しゃ</rt></ruby>－
+  ja_romaji: Rōdo obu Doragon - Doragon no Zettaisha -
   ko:
   ko_rr:
   zh-TW:
