--- a/rush.yaml
+++ b/rush.yaml
@@ -116423,7 +116423,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -116435,7 +116436,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の手札・フィールドのモンスター（ドラゴン族）を３体まで素材として墓地へ送り、モンスター（レベル１０以上／ドラゴン族）をフュージョン召喚する。このターン、この効果で特殊召喚したモンスターは相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -116479,7 +116481,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -116491,7 +116494,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを４枚めくり、お互いに確認する。自分はめくったカードの中からモンスター（レベル８／光属性／ドラゴン族）と「究極の青眼伝説」をそれぞれ１枚まで選んで手札に加える事ができる。残りのカードをデッキに戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -116539,7 +116543,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手モンスターの直接攻撃宣言時、自分の墓地のモンスター３体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -116551,7 +116556,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    その攻撃を無効にする。
   ko:
   zh-TW:
   zh-CN:
