--- a/data/cards/25259669.yaml
+++ b/data/cards/25259669.yaml
@@ -221,6 +221,10 @@ sets:
     set_name: "Structure Deck R: Warriors' Strike"
     rarities:
     - Common
+  - set_number: 23TP-JP403
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: GENF-KR004
     set_name: Generation Force
