--- a/data/cards/74402414.yaml
+++ b/data/cards/74402414.yaml
@@ -89,6 +89,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
     rarities:
     - Common
+  - set_number: 23TP-JP414
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: PTDN-KR050
     set_name: Phantom Darkness
