--- a/data/cards/50619462.yaml
+++ b/data/cards/50619462.yaml
@@ -93,6 +93,10 @@ sets:
     set_name: Tournament Pack 2020 Vol.3
     rarities:
     - Common
+  - set_number: 23TP-JP413
+    set_name: Tournament Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: EP16-KR037
     set_name: Extra Pack 2016
