--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -21,6 +21,9 @@
 # Phoenix
 - yugipedia: 371832
   fake_password: 10000090
+# Black Luster Soldier (Normal Monster)
+- yugipedia: 10276
+  fake_password: 10000100
 ## Prereleases
 # Duelist Nexus
 - set_abbreviation: DUNE
@@ -42,9 +45,6 @@
 - set_abbreviation: SR14
   fake_password_range:
     - 100314000
-# Black Luster Soldier
-- yugipedia: 10276
-  fake_password: 511002613
-# Rescue Hedgehog
-- yugipedia: 994370
-  fake_password: 100200242
+# Blaze, Supreme Ruler of Dragons
+- yugipedia: 1004769
+  fake_password: 100200243
