--- a/data/cards/03534077.yaml
+++ b/data/cards/03534077.yaml
@@ -121,6 +121,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Collector's Rare
+  - set_number: SR14-JP011
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
+    - Common
   ko:
   - set_number: PP08-KR030
     set_name: Premium Pack Vol.8
