--- a/data/cards/15033525.yaml
+++ b/data/cards/15033525.yaml
@@ -95,6 +95,10 @@ sets:
     set_name: 'Collectors Pack: Duelist of Flash Version'
     rarities:
     - Rare
+  - set_number: SR14-JP015
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
+    - Common
   ko:
   - set_number: CPF1-KR007
     set_name: 'Collectors Pack: Duelist of Flash Version'
