--- a/data/cards/29510428.yaml
+++ b/data/cards/29510428.yaml
@@ -7,8 +7,8 @@ name:
   fr: Princesse Impériale Quinquery
   it: Quinquery Principessa Imperiale
   pt: Princesa Imperial Quinquery
-  ja:
-  ja_romaji:
+  ja: <ruby>召<rt>しょう</rt></ruby><ruby>煌<rt>こう</rt></ruby><ruby>女<rt>じょ</rt></ruby>クインクエリ
+  ja_romaji: Shōkōjo Kuinkueri
   ko:
   ko_rr:
   zh-TW:
@@ -74,6 +74,10 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  ja:
+  - set_number: WPP4-JP053
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
