--- a/data/cards/67136033.yaml
+++ b/data/cards/67136033.yaml
@@ -115,6 +115,10 @@ sets:
     set_name: V Jump Edition 8
     rarities:
     - Ultra Rare
+  - set_number: SR14-JP010
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
+    - Common
   ko:
   - set_number: PP08-KR029
     set_name: Premium Pack Vol.8
