--- a/data/cards/67282505.yaml
+++ b/data/cards/67282505.yaml
@@ -46,8 +46,10 @@ series:
 images:
 - index: 1
   image: MitsutheInsectNinja-LART-EN-UR-LE.png
+  illustration: MitsutheInsectNinja-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: MitsutheInsectNinja-MP23-EN-R-1E.png
+  illustration: MitsutheInsectNinja-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DABL-EN016
