--- a/data/cards/76133574.yaml
+++ b/data/cards/76133574.yaml
@@ -26,7 +26,8 @@ text:
     Puoi bandire questa carta dalla tua mano, poi scegliere come bersaglio 1 mostro Pesce nel tuo Cimitero; bandiscilo. Durante il turno del tuo avversario, se questa carta è bandita: puoi Evocarla Specialmente. Se questa carta viene Evocata Specialmente, puoi (eccetto durante il Damage Step): immediatamente dopo che questo effetto si è risolto, Synchro Evoca 1 Mostro Synchro Pesce utilizzando questa carta che controlli. Puoi utilizzare ogni effetto di "Zep, Rubino dei Ghoti" una sola volta per turno.
   pt: |-
     Você pode banir este card da sua mão e, depois, escolha 1 monstro Peixe no seu Cemitério; bana-o. Durante o turno do seu oponente, se este card for banido: você pode Invocá-lo por Invocação-Especial. Se este card for Invocado por Invocação-Especial, você pode (exceto durante a Etapa de Dano): imediatamente depois que este efeito resolver, Invocar por Invocação-Sincro 1 Monstro Sincro Peixe usando este card que você controla. Você só pode usar cada efeito de "Zep, o Rubi dos Ghoti" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードを手札から除外し、自分の墓地の魚族モンスター１体を対象として発動できる。そのモンスターを除外する。②：このカードが相手ターンに除外された場合に発動できる。このカードを特殊召喚する。③：このカードが特殊召喚した場合に発動できる。このカードを含む自分フィールドのモンスターを素材として魚族Ｓモンスター１体のＳ召喚を行う。
   ko:
   zh-TW:
   zh-CN: |-
