--- a/data/cards/01248895.yaml
+++ b/data/cards/01248895.yaml
@@ -207,6 +207,10 @@ sets:
     set_name: 'Structure Deck: Yugi Muto'
     rarities:
     - Common
+  - set_number: SR14-JP036
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
+    - Common
   ko:
   - set_number: PSV-K006
     set_name: Pharaoh's Servant
