--- a/data/cards/03137279.yaml
+++ b/data/cards/03137279.yaml
@@ -26,7 +26,8 @@ text:
     Se uno o più mostri Pesce vengono banditi (eccetto durante il Damage Step): puoi Evocare Specialmente questa carta dalla tua mano. Durante la Standby Phase del prossimo turno dopo che questa carta è stata bandita: puoi scegliere come bersaglio 1 delle tue Trappole "Ghoti" che sono bandite o nel tuo Cimitero; Posiziona quel bersaglio. Puoi utilizzare ogni effetto di "Ixeep, Presagio dei Ghoti" una sola volta per turno.
   pt: |-
     Se um ou mais monstros Peixe forem banidos (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial da sua mão. Durante a Fase de Apoio do próximo turno depois que este card foi banido: você pode escolher 1 das suas Armadilhas "Ghoti" que estiverem banidas ou no seu Cemitério; Baixe o alvo. Você só pode usar cada efeito de "Ixeep, o Presságio dos Ghoti" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：魚族モンスターが除外された場合に発動できる。このカードを手札から特殊召喚する。②：このカードが除外された次のターンのスタンバイフェイズに、自分の墓地・除外状態の「ゴーティス」罠カード１枚を対象として発動できる。そのカードを自分フィールドにセットする。
   ko:
   zh-TW:
   zh-CN: |-
