--- a/data/cards/11765832.yaml
+++ b/data/cards/11765832.yaml
@@ -96,6 +96,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  ja:
+  - set_number: WPP4-JP049
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
