--- a/data/cards/13522325.yaml
+++ b/data/cards/13522325.yaml
@@ -140,6 +140,10 @@ sets:
     set_name: Tournament Pack 2018 Vol.3
     rarities:
     - Common
+  - set_number: SR14-JP019
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
+    - Common
   ko:
   - set_number: LON-KR067
     set_name: Labyrinth of Nightmare
