--- a/data/cards/39522887.yaml
+++ b/data/cards/39522887.yaml
@@ -26,7 +26,8 @@ text:
     Durante la Main Phase (Effetto Rapido): puoi bandire 2 mostri Pesce dalla tua mano e/o Cimitero; Evoca Specialmente questa carta dalla tua mano. Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 carta scoperta sul Terreno; bandiscila quando lascia il Terreno. Se questa carta viene bandita: puoi bandire 1 mostro Pesce dal tuo Cimitero; aggiungi questa carta alla tua mano. Puoi utilizzare ogni effetto di "Snopios, Ombra dei Ghoti" una sola volta per turno.
   pt: |-
     Durante a Fase Principal (Efeito Rápido): você pode banir 2 monstros Peixe da sua mão e/ou do Cemitério; Invoque este card por Invocação-Especial da sua mão. Se este card for Invocado por Invocação-Especial: você pode escolher 1 card com a face para cima no campo; bana-o quando ele deixar o campo. Se este card for banido: você pode banir 1 monstro Peixe do seu Cemitério; adicione este card à sua mão. Você só pode usar cada efeito de "Snopios, a Sombra dos Ghoti" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手のメインフェイズに、自分の手札・墓地から魚族モンスター２体を除外して発動できる。このカードを手札から特殊召喚する。②：このカードが特殊召喚した場合、フィールドの表側表示カード１枚を対象として発動できる。そのカードはフィールドから離れた場合に除外される。③：このカードが除外された場合、自分の墓地から魚族モンスター１体を除外して発動できる。このカードを手札に加える。
   ko:
   zh-TW:
   zh-CN: |-
