--- a/data/cards/40460013.yaml
+++ b/data/cards/40460013.yaml
@@ -86,6 +86,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Ultra Rare
+  ja:
+  - set_number: WPP4-JP046
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
