--- a/data/cards/61845881.yaml
+++ b/data/cards/61845881.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Common
+  ja:
+  - set_number: WPP4-JP047
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
