--- a/data/cards/72309040.yaml
+++ b/data/cards/72309040.yaml
@@ -32,7 +32,9 @@ text:
   pt: |-
     1+ Reguladores Peixe + 1+ monstros não-Reguladores
     O ATK original deste card se torna 500 x o número de monstros banidos. Se este card for Invocado por Invocação-Sincro durante o turno do seu oponente: você pode banir todos os cards no campo. Durante a Fase de Apoio do próximo turno depois que este card foi banido da Zona de Monstros: você pode Invocar este card banido por Invocação-Especial.
-  ja:
+  ja: |-
+    魚族チューナー１体以上＋チューナー以外のモンスター１体以上
+    ①：このカードの元々の攻撃力は、除外状態のモンスターの数×５００になる。②：相手ターンに、このカードがＳ召喚した場合に発動できる。フィールドのカードを全て除外する。③：このカードがモンスターゾーンから除外された次のターンのスタンバイフェイズに発動できる。除外状態のこのカードを特殊召喚する。
   ko:
   zh-TW:
   zh-CN: |-
