--- a/data/cards/78199891.yaml
+++ b/data/cards/78199891.yaml
@@ -42,8 +42,10 @@ series:
 images:
 - index: 1
   image: MikankoRivalry-DBAD-JP-C.png
+  illustration: MikankoRivalry-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: MikankoRivalry-AMDE-EN-R-1E.png
+  illustration: MikankoRivalry-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: AMDE-EN036
