--- a/data/cards/91323605.yaml
+++ b/data/cards/91323605.yaml
@@ -7,8 +7,8 @@ name:
   fr: Comment Dai Est Arrivé Ici ?
   it: Come Dai Fatto a Finire Lì?
   pt: Como Dai Chegou Aqui?
-  ja:
-  ja_romaji:
+  ja: <ruby>奇<rt>き</rt></ruby><ruby>異<rt>い</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>開<rt>かい</rt></ruby>
+  ja_romaji: Ki'ikaikai
   ko:
   ko_rr:
   zh-TW:
@@ -62,6 +62,10 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  ja:
+  - set_number: WPP4-JP062
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
