--- a/data/cards/97396380.yaml
+++ b/data/cards/97396380.yaml
@@ -170,6 +170,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: SR14-JP020
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
+    - Common
   ko:
   - set_number: PR04-KR007
     set_name: Promo Pack 2013 Vol.4
