--- a/rush.yaml
+++ b/rush.yaml
@@ -116581,6 +116581,66 @@ yugipedia_page_id: 1011314
 ---
 konami_id:
 name:
+  en: Soul Drake
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ソウル・ドレイク
+  ja_romaji: Souru Doreiku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase this card was Normal or Special Summoned, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field. This turn, your Level 7 or lower monsters cannot attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: DARK
+level: 4
+atk: 1100
+def: 600
+images:
+- index: 1
+  image: SoulDrake-RDSD0A-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0A-JP007
+    set_name: 'Structure Deck: Ultimate Blue-Eyes Legend'
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1011526
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
