--- a/rush.yaml
+++ b/rush.yaml
@@ -116601,7 +116601,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに、自分フィールドの表側表示の効果モンスター（レベル４以下）２体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -116613,7 +116614,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル８／光属性／ドラゴン族）１体を選び、自分フィールドに表側表示で特殊召喚する。このターン、自分はモンスター（レベル７以下）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
