--- a/data/cards/02526224.yaml
+++ b/data/cards/02526224.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19398
+password: 2526224
 name:
   en: Fire King High Avatar Kirin
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札に存在する場合、自分・相手のメインフェイズに発動できる。このカード以外の自分の手札・フィールド（表側表示）の炎属性モンスター１体を破壊し、このカードを特殊召喚する。②：このカードが破壊され墓地へ送られた場合に発動できる。自分の手札・墓地から「炎王神獣 キリン」以外の「炎王」モンスター１体を特殊召喚する。その後、フィールドのカード１枚を破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -35,20 +36,19 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingHighAvatarKirin-SR14-JP-OP.png
+  image: FireKingHighAvatarKirin-SR14-JP-SR.png
 sets:
   ja:
   - set_number: SR14-JP002
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 992826
-fake_password:
-- 100314002
