--- a/data/cards/90681088.yaml
+++ b/data/cards/90681088.yaml
@@ -1,5 +1,5 @@
 konami_id: 19404
-password:
+password: 90681088
 name:
   en: Legendary Fire King Ponix
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：元々の属性が炎属性となる自分のモンスターが戦闘・効果で破壊された場合に発動できる。このカードを手札から特殊召喚する。②：このカードが召喚・特殊召喚した場合に発動できる。デッキから「炎王」魔法・罠カード１枚を手札に加える。③：このカードが破壊され墓地へ送られた場合、次のスタンバイフェイズに発動する。墓地のこのカードを手札に加える。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: LegendaryFireKingPonix-SR14-JP-OP.png
+  image: LegendaryFireKingPonix-SR14-JP-SR.png
 sets:
   ja:
   - set_number: SR14-JPP02
@@ -45,7 +46,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 1009556
-fake_password:
-- 100314002
