--- a/data/cards/91703676.yaml
+++ b/data/cards/91703676.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19401
+password: 91703676
 name:
   en: Fire King Sacred Immolation
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分フィールドの「炎王」モンスターと相手フィールドのカードをそれぞれ同じ数だけ対象として発動できる。そのカードを破壊する。②：自分フィールドの「炎王」カードが効果で破壊される場合、代わりに墓地のこのカードを除外できる。
   ko:
   zh-TW:
   zh-CN:
@@ -31,20 +32,19 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingSacredImmolation-SR14-JP-OP.png
+  image: FireKingSacredImmolation-SR14-JP-SR.png
 sets:
   ja:
   - set_number: SR14-JP025
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1002078
-fake_password:
-- 100314025
