--- a/data/cards/38798785.yaml
+++ b/data/cards/38798785.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19402
+password: 38798785
 name:
   en: Solidarity Strike of the Fire Kings
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の手札・デッキ・墓地からそれぞれ１体ずつ、獣族・獣戦士族・鳥獣族の炎属性モンスターを特殊召喚する（同じ種族は１体まで）。この効果で特殊召喚したモンスターの効果は無効化され、エンドフェイズに破壊される。②：墓地のこのカードを除外して発動できる。このターン、自分の「炎王」モンスターの召喚・特殊召喚成功時に相手は魔法・罠・モンスターの効果を発動できない。
   ko:
   zh-TW:
   zh-CN:
@@ -31,20 +32,19 @@ series:
 - Fire King
 images:
 - index: 1
-  image: SolidarityStrikeoftheFireKings-SR14-JP-OP.png
+  image: SolidarityStrikeoftheFireKings-SR14-JP-SR.png
 sets:
   ja:
   - set_number: SR14-JP033
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1002079
-fake_password:
-- 100314033
