--- a/data/cards/64182380.yaml
+++ b/data/cards/64182380.yaml
@@ -1,5 +1,5 @@
 konami_id: 19403
-password:
+password: 64182380
 name:
   en: Garunix Eternity, Hyang of the Fire Kings
   de:
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    レベル８モンスター×２体以上
+    このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＸ召喚した場合に発動できる。フィールドの他のモンスターを全て破壊する。②：このカードのＸ素材を１つ取り除き、フィールドの魔法・罠カード１枚を対象として発動できる。そのカードを破壊し、このカードの攻撃力を５００アップする。③：Ｘ素材を持っているこのカードが破壊された場合に発動できる。このカードが持っていたＸ素材の数まで、自分の墓地から「炎王」モンスターを特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -37,7 +39,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: GarunixEternityHyangoftheFireKings-SR14-JP-OP.png
+  image: GarunixEternityHyangoftheFireKings-SR14-JP-UR.png
 sets:
   ja:
   - set_number: SR14-JPP01
@@ -47,7 +49,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 992821
-fake_password:
-- 100314001
