--- a/data/cards/66431519.yaml
+++ b/data/cards/66431519.yaml
@@ -1,5 +1,5 @@
 konami_id: 19397
-password:
+password: 66431519
 name:
   en: Sacred Fire King Garunix
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在し、元々の属性が炎属性となる自分のモンスターが戦闘・効果で破壊された場合に発動できる。このカードを特殊召喚する。②：このカードが召喚・特殊召喚した場合に発動できる。「聖炎王 ガルドニクス」以外の自分の手札・デッキ・フィールド（表側表示）の獣族・獣戦士族・鳥獣族の炎属性モンスター１体を破壊する。このカードの攻撃力はターン終了時まで、この効果で破壊したモンスターの攻撃力の半分だけアップする。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: SacredFireKingGarunix-SR14-JP-OP.png
+  image: SacredFireKingGarunix-SR14-JP-UR.png
 sets:
   ja:
   - set_number: SR14-JP001
@@ -44,7 +45,5 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 992823
-fake_password:
-- 100314001
