--- a/data/cards/03534077.yaml
+++ b/data/cards/03534077.yaml
@@ -8,7 +8,7 @@ name:
   it: Soldato Allenatore Lupoabbaia
   pt: Soldado Técnico Uivo de Lobo
   ja: <ruby>熱<rt>ねっ</rt></ruby><ruby>血<rt>けつ</rt></ruby><ruby>獣<rt>じゅう</rt></ruby><ruby>士<rt>し</rt></ruby>ウルフバーク
-  ja_romaji: Nekketsu Jūshi Urufubāku
+  ja_romaji: Nekketsujūshi Urufubāku
   ko: 열혈수사 울프바크
   ko_rr: Yeolhyeolsusa Ulpeubakeu
   zh-TW:
