--- a/data/cards/17192817.yaml
+++ b/data/cards/17192817.yaml
@@ -29,7 +29,7 @@ text:
   zh-CN: |-
     从熔岩大地诞生的巨人。使用熔岩拳击攻击。
 card_type: Monster
-monster_type_line: Pyro
+monster_type_line: Pyro / Normal
 attribute: FIRE
 level: 5
 atk: 1000
