--- a/data/rush/15812.yaml
+++ b/data/rush/15812.yaml
@@ -54,6 +54,8 @@ attribute: DARK
 level: 7
 atk: 2100
 def: 2300
+series:
+- Darkness
 images:
 - index: 1
   image: DarknessCrestedHawk-RDSD05-JP-C.png
