--- a/rush.yaml
+++ b/rush.yaml
@@ -17052,6 +17052,8 @@ attribute: DARK
 level: 7
 atk: 2100
 def: 2300
+series:
+- Darkness
 images:
 - index: 1
   image: DarknessCrestedHawk-RDSD05-JP-C.png
@@ -116640,6 +116642,60 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1011526
+---
+konami_id:
+name:
+  en: Descending Dragon of Clear Water
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>明<rt>めい</rt></ruby><ruby>鏡<rt>きょう</rt></ruby><ruby>止<rt>し</rt></ruby><ruby>水<rt>すい</rt></ruby>・<ruby>天<rt>てん</rt></ruby><ruby>孫<rt>そん</rt></ruby><ruby>降<rt>こう</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>
+  ja_romaji: Meikyōshisui Tensonkōryū
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a monster on your field is destroyed by an opponent's card effect.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 monster from your Graveyard face-up to your field. Then, if you have a High Dragon Type monster in your Graveyard, the monster Special Summoned by this effect gains 1000 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: DescendingDragonofClearWater-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP039
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1011943
 ---
 konami_id:
 name:
