--- a/data/cards/03627449.yaml
+++ b/data/cards/03627449.yaml
@@ -37,6 +37,7 @@ def: 2500
 ritual_spell: Novox's Prayer
 series:
 - Guardian
+- Skull Guardian
 images:
 - index: 1
   image: SkullGuardian-TP2-NA-R-UE.jpg
